--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <hr>
 <h3>English tutor, blogger</h3>
 <img src="images/Statue-of-Diana-The-Hunting-Goddess-large.png">
-<p>I am an English tutor with an associate of arts degree from La Guardia Community College in New York. 
+<p>I am an English tutor with an Associate of Arts degree from La Guardia Community College in New York. 
 I teach children and adults of all ages.
 My teaching is very personal and tailored to each student's needs and learning style.</p>
 <p>My interests include architecture, bilingual development of children, and travelling.</p>
