--- a/faq.html
+++ b/faq.html
@@ -20,7 +20,7 @@
                   
 <h1>Frequently Asked Questions</h1>
 <hr>
-<h3>Have you ever lived in en English-speaking country?</h3>
+<h3>Have you ever lived in an English-speaking country?</h3>
 <p>Yes, I had lived in the U.S., New York, for over six years.
 </p>
 
